[gd_scene load_steps=12 format=3 uid="uid://bbxpxysb4lgqt"]

[ext_resource type="Theme" uid="uid://cchp864k50mvc" path="res://ui_theme.tres" id="1_c2e5g"]
[ext_resource type="Texture2D" uid="uid://sh8d13r4odpy" path="res://assets/characters/Neuro-sama.png" id="2_dfior"]
[ext_resource type="Script" path="res://scenes/ui/game_menu/party.gd" id="2_p6mcn"]
[ext_resource type="PackedScene" uid="uid://cnpbuybm4ib8l" path="res://scenes/ui/character_portrait.tscn" id="3_v0iou"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_og2r2"]
color = Color(0, 0, 0, 0.25098)
thickness = 2

[sub_resource type="Gradient" id="Gradient_lmlpm"]
offsets = PackedFloat32Array(0.75, 0.95)
colors = PackedColorArray(0.8, 0.639216, 0.431373, 1, 0.8, 0.640533, 0.432, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bhc1j"]
gradient = SubResource("Gradient_lmlpm")

[sub_resource type="Gradient" id="Gradient_6t6db"]
offsets = PackedFloat32Array(0.05, 0.25)
colors = PackedColorArray(0.8, 0.640533, 0.432, 0, 0.8, 0.639216, 0.431373, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fjlim"]
gradient = SubResource("Gradient_6t6db")

[sub_resource type="AtlasTexture" id="AtlasTexture_8l6cd"]
atlas = ExtResource("2_dfior")
region = Rect2(0, 0, 100, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_y24ke"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l6cd")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_left = 0.271988
offset_top = 0.303986
offset_right = 0.271973
offset_bottom = 0.263947
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_c2e5g")
tab_alignment = 1
current_tab = 0
metadata/_edit_use_anchors_ = true

[node name="Party" type="MarginContainer" parent="TabContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_top = 20
script = ExtResource("2_p6mcn")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Party"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="InParty" type="HBoxContainer" parent="TabContainer/Party/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CharacterPortrait" parent="TabContainer/Party/VBoxContainer/InParty" instance=ExtResource("3_v0iou")]
layout_mode = 2

[node name="CharacterPortrait2" parent="TabContainer/Party/VBoxContainer/InParty" instance=ExtResource("3_v0iou")]
layout_mode = 2
associated_character = "Evil"

[node name="CharacterPortrait3" parent="TabContainer/Party/VBoxContainer/InParty" instance=ExtResource("3_v0iou")]
layout_mode = 2
associated_character = "Vedal"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Party/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxLine_og2r2")

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Party/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TabContainer/Party/VBoxContainer/HBoxContainer2"]
z_index = 1
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
texture = SubResource("GradientTexture1D_bhc1j")

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Party/VBoxContainer/HBoxContainer2"]
clip_contents = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
follow_focus = true

[node name="NotInParty" type="HBoxContainer" parent="TabContainer/Party/VBoxContainer/HBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CharacterPortrait" parent="TabContainer/Party/VBoxContainer/HBoxContainer2/ScrollContainer/NotInParty" instance=ExtResource("3_v0iou")]
layout_mode = 2
associated_character = "Anny"

[node name="CharacterPortrait2" parent="TabContainer/Party/VBoxContainer/HBoxContainer2/ScrollContainer/NotInParty" instance=ExtResource("3_v0iou")]
layout_mode = 2
associated_character = "Vedal"

[node name="CharacterPortrait3" parent="TabContainer/Party/VBoxContainer/HBoxContainer2/ScrollContainer/NotInParty" instance=ExtResource("3_v0iou")]
layout_mode = 2

[node name="CharacterPortrait4" parent="TabContainer/Party/VBoxContainer/HBoxContainer2/ScrollContainer/NotInParty" instance=ExtResource("3_v0iou")]
layout_mode = 2
associated_character = "Evil"

[node name="CharacterPortrait5" parent="TabContainer/Party/VBoxContainer/HBoxContainer2/ScrollContainer/NotInParty" instance=ExtResource("3_v0iou")]
layout_mode = 2
associated_character = "Anny"

[node name="TextureRect2" type="TextureRect" parent="TabContainer/Party/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
texture = SubResource("GradientTexture1D_fjlim")

[node name="Character" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Panel" type="Panel" parent="TabContainer/Character"]
clip_contents = true
layout_mode = 0
offset_left = 60.0
offset_top = 40.0
offset_right = 147.0
offset_bottom = 186.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TabContainer/Character/Panel"]
position = Vector2(44, 75)
sprite_frames = SubResource("SpriteFrames_y24ke")
autoplay = "default"
frame_progress = 0.929207

[node name="Config" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Config"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -0.363586
offset_right = -0.236389
offset_bottom = 0.197998
grow_horizontal = 2
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="TabContainer/Config/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "leave
"

[node name="Button2" type="Button" parent="TabContainer/Config/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "save?
"

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Config/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Config/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Config/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Config/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "asdf"

[node name="Button2" type="Button" parent="TabContainer/Config/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "asdf"

[node name="Button3" type="Button" parent="TabContainer/Config/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "asdf"
